# codemap

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  codemap.ts  install.sh  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
codemap-cli/: Cargo.toml
codemap-cli/src/: main.rs
codemap-core/: Cargo.toml  build.rs
codemap-core/data/: apk-protectors.json  die-epsig.json  rustc_versions.toml  signsrch.LICENSE.md
codemap-core/data/anti-analysis/: al-khaser.yaml  pafish.yaml
codemap-core/data/capa-rules/: NOTICE
codemap-core/data/com/: ATTRIBUTION.md  build.py
codemap-core/data/endpoint-enrichment/: dyndns.txt  lolbins.txt  tlds.txt
codemap-core/src/: cpg.rs  dataflow_local.rs  demangle.rs  disasm.rs  disasm_jt.rs  fingerprint.rs  lib.rs  parser.rs  resolve.rs  scanner.rs  strings.rs  types.rs  utils.rs
codemap-core/src/actions/: algorithms.rs  analysis.rs  anti_analysis.rs  apk.rs  apk_fingerprint.rs  bin_disasm.rs  binary.rs  bridges.rs  capa.rs  centrality.rs  cert.rs  cff_detect.rs  com_scan.rs  community.rs  compare.rs  composite.rs  crypto_const.rs  crypto_loops.rs  cuda_trace.rs  cve.rs  dataflow.rs  decoder_find.rs  dex.rs  die_fingerprint.rs  disalign_bytes.rs  elf_os.rs  endpoint_enrich.rs  exports_format.rs  functions.rs  fuzzy.rs  graph_theory.rs  insights.rs  lang_fp.rs  lang_id.rs  leiden.rs  license.rs  link_prediction.rs  lsp.rs  meta_path.rs  ml.rs  (+21 more)
codemap-core/src/actions/reverse/: common.rs  mod.rs  pe.rs  schema.rs  web.rs
codemap-core/src/cfg/: build.rs  dominators.rs  loops.rs  mod.rs
codemap-core/tests/: integration.rs
codemap-napi/: Cargo.toml  package-lock.json  package.json
codemap-napi/src/: lib.rs
docs/superpowers/plans/: 2026-04-23-rust-language-support.md
examples/: README.md
plugin/: plugin.json
plugin/.claude-plugin/: plugin.json
plugin/skills/codemap/: SKILL.md
skills/codemap/: SKILL.md
skills/graph/: SKILL.md
tools/: die_miner.py
