[package]
name = "codemap-cli"
version = "5.40.0"
edition = "2021"
license = "MIT"
description = "CLI for codemap — heterogeneous-graph codebase analysis with 164 actions (incl. `think` orchestrator) and 33 EntityKinds"
repository = "https://github.com/charleschenai/codemap"

[[bin]]
name = "codemap"
path = "src/main.rs"

[dependencies]
codemap-core = { path = "../codemap-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
