[package]
name = "codemap-core"
version = "5.19.0"
edition = "2021"
license = "MIT"
description = "Heterogeneous-graph codebase analysis library — 163 actions, 30 EntityKinds, across source AST, binary RE, schema parsing, supply chain, recon-artifact ingestion, secret tracking, and dependency analysis"
repository = "https://github.com/charleschenai/codemap"

[dependencies]
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-bash = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rayon = "1"
walkdir = "2"
regex = "1"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-lua = "0.5.0"
# Disasm — pure Rust x86/x64 decoder (no system libs). Default feature
# set is heavy; pull only what we need: decoder + masm-style formatter.
iced-x86 = { version = "1", default-features = false, features = ["std", "decoder", "masm"] }
