[package]
name = "codemap-core"
version = "5.47.0"
edition = "2021"
license = "MIT"
description = "Heterogeneous-graph codebase analysis library — 164 actions (incl. `think` natural-language goal router), 33 EntityKinds, across source AST, binary RE (ARM/AArch64 + section-level promotion + diff-namespace cross-graph + DEX bytecode + Android permission heuristics), schema parsing, supply chain, recon-artifact ingestion, secret tracking, dependency analysis, ML model architecture"
repository = "https://github.com/charleschenai/codemap"

[dependencies]
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-bash = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rayon = "1"
walkdir = "2"
regex = "1"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-lua = "0.5.0"
# 5.26.0: closes the AST coverage gap surfaced by the COMPETITION audit
# — Scala (Joern is Scala; codemap previously parsed only its build
# scripts), Swift (iOS / macOS apps), Dart (Flutter mobile + web).
tree-sitter-scala = "0.26"
tree-sitter-swift = "0.7"
tree-sitter-dart  = "0.2"
# Disasm — pure Rust x86/x64 decoder (no system libs). Default feature
# set is heavy; pull only what we need: decoder + masm-style formatter.
iced-x86 = { version = "1", default-features = false, features = ["std", "decoder", "masm"] }
# Pure-Rust deflate decoder. Needed to extract classes.dex from APKs
# (real APKs always deflate-compress the large bytecode entries). No
# system libs, MIT/Apache. Used only inside actions/apk.rs.
miniz_oxide = "0.8"
# Multi-pattern byte search. Already in the tree (transitive via
# regex); pulled directly for actions/crypto_const.rs::signsrch_scan(),
# which runs ~2,200 byte patterns over a binary in one Aho-Corasick
# pass (5.38.0 — signsrch corpus absorption).
aho-corasick = "1"
memchr = "2"

[build-dependencies]
# Build-time XML → bincode conversion of data/signsrch.xml (3.4 MB,
# 2,338 entries). Output blob is `include_bytes!`-d at runtime so the
# 3.4 MB XML is paid only once at build time. serde+bincode are
# already runtime deps; regex is reused for the simple line-by-line
# XML parse (the corpus is dead-flat — one `<p t="…">HEX</p>` per line,
# no nested elements).
serde   = { version = "1", features = ["derive"] }
bincode = "1"
regex   = "1"
